# gmw

./: CMakeLists.txt  README.md
circuits/: and-input-1.txt
include-shared/: circuit.hpp  messages.hpp  util.hpp
include/drivers/: network_driver.hpp  ot_driver.hpp  peer_driver.hpp  share_driver.hpp
include/pkg/: peer_client.hpp  peer_link.hpp
src-shared/: circuit.cxx  messages.cxx  util.cxx
src/cmd/: evaluator.cxx  garbler.cxx  ot_test.cxx  participant.cxx
src/drivers/: network_driver.cxx  ot_driver.cxx  peer_driver.cxx  share_driver.cxx
src/pkg/: evaluator.cxx  garbler.cxx  peer_client.cxx  peer_link.cxx
test/expected-output/: adder-output.txt  aes-output.txt  mult-output.txt
test/five-parties/: adder_input.txt  aes_input.txt  mult_input.txt
test/three-parties/: adder_input.txt  aes_input.txt  mult_input.txt
test/two-parties/: adder_input.txt  addresses.txt  aes_input.txt  and_input.txt  mult_input.txt
